# nctpy

./: .gitignore  CITATION.cff  README.md  README.rst  contributing.md  environment.yml  pyproject.toml  setup.cfg  setup.py
data/: pnc_schaefer200_system_labels.txt
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/pages/: getting_started.rst  installation.rst  references.rst
docs/pages/examples/: age_effects_metrics.ipynb  age_effects_metrics.rst  gradient_metric_correlations.ipynb  gradient_metric_correlations.rst  ieeg_stim_optimal.ipynb  index.rst  metric_correlations.ipynb  metric_correlations.rst  minimum_energy_fast.ipynb  minimum_energy_fast.rst  optimal_energy_ieeg_stim.rst
docs/pages/numerics/: index.rst
docs/pages/theory/: figures.asv  figures.m  index.rst
docs/source/: conf.py  index.rst
docs/source/pages/: installation.rst  references.rst
docs/source/pages/examples/: age_effects_metrics.ipynb  age_effects_metrics.rst  gradient_metric_correlations.ipynb  gradient_metric_correlations.rst  index.rst  (+6 more)
results/: README.md
scripts/: README.md  control_energy_wrapper.ipynb  get_control_inputs.ipynb  path_a_control_energy_binary.ipynb  path_a_control_energy_directed.ipynb  path_a_control_energy_nonbinary.ipynb  path_b_ave_ctrb.ipynb  plot_schematic_control.py  plot_schematic_impulse.py
src/nctpy/: energies.py  metrics.py  pipelines.py  plotting.py  utils.py
src/network_control/: energies.py  metrics.py  pipelines.py  plotting.py  utils.py
src/network_control.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/null_models/: geomsurr.py
src/tests/: debug.py  energies.ipynb  gramian_test.ipynb  make_fixtures.py  metrics.ipynb  minimum_energy_fast.ipynb  strength_ac_correlations.ipynb  test_nctpy.py  test_network_control.py  tests.py
src/tests/.ipynb_checkpoints/: energies-checkpoint.ipynb
src/tests/fixtures/: A.npy  A_c_1.npy  A_c_2.npy  A_d_1.npy  A_d_2.npy  B.npy  ac_c.npy  ac_d.npy  control_B.npy  control_B.npz  control_S.npy  control_S.npz  control_T.npy  control_T.npz  control_continuous.npz  control_discrete.npy  control_discrete.npz  control_ref.npz  control_rho.npy  control_rho.npz  u.npy  u_int.npy  weights_rank_scale.npy  weights_rank_scale_const.npy  weights_scale.npy  weights_scale_const.npy  x.npy  x_bin.npy  x_bin.npy.npz  x_norm.npy  xf.npy
(+4 files in other folders)
