[metadata]
name = nctpy
version = 1.0.0
author = Linden Parkes, Jason Kim, and Jennifer Stiso
author_email =
    lindenparkes@gmail.com
    jinsu1@seas.upenn.edu
    jeni.stiso@gmail.com

description = Python implementation of concepts from network control theory
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/BassettLab/nctpy
project_urls =
    Bug Tracker = https://github.com/BassettLab/nctpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires=
    numpy
    scipy
    tqdm
    statsmodels
    seaborn
    nibabel
    nilearn
[options.packages.find]
where = src
